--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tableau de Bord{% endblock %}
+{% block title %}Tableau de Bord
+{% endblock %}
 
 {% block body %}
-    
 {% endblock %}
