--- a/templates/FichesArticle/My_FicheArticle.html.twig
+++ b/templates/FichesArticle/My_FicheArticle.html.twig
@@ -16,22 +16,22 @@
 						<thead>
 							<tr>
 								<th>Société</th>
-								<th>Code Fiche</th>
 								<th>Etape Fiche</th>
 								<th>Utilisateur</th>
 								<th>Générique</th>
 								<th>Stat 1</th>
+								<th>Actions</th>
 							</tr>
 						</thead>
 						<tbody>
 							{% for article in articles %}
 								<tr style="background-color: {{ article.company.colorCode }}">
 									<th>{{ article.company.name }}</th>
-									<th>{{ article.codeFiche }}</th>
 									<th>{{ article.etapeFiche }}</th>
 									<th>{{ article.username.firstName }}  {{ article.username.lastName }}</th>
 									<th>{{ article.generique }}</th>
 									<th>{{ article.stat1 }}</th>
+									<th>{% if article.etapeFiche == "BROUILLON" %}<a type="button" class="btn mr-2 mb-2 btn-danger" href="{{ path("editFicheArticle", {'id' : article.id }) }}"><span class="btn-icon-wrapper pr-2 opacity-7"><i class="fa fa-eraser fa-w-20"></i></span>Modifier la fiche</a>{% endif %}</th>
 								</tr>
 							{% endfor %}
 						</tbody>
